Aside from the projects section, I'm declaring this migration to Tailwind complete!

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ let listItems = [
 	}
 </style>
 <header
-	class="fixed top-0 z-20 flex h-[--header-height] w-full justify-center bg-white text-[length:--font-size] duration-duration"
+	class="fixed top-0 z-30 flex h-[--header-height] w-full justify-center bg-white text-[length:--font-size] duration-duration"
 >
 	<!--headerContainer-->
 	<div
@@ -37,7 +37,7 @@ let listItems = [
 		</a>
 		<nav class="headerNav w-full md:hidden">
 			<ul
-				class="m-0 -mr-px flex items-center justify-end p-0 md:absolute md:left-0 md:top-[--header-height] md:m-auto md:w-screen md:flex-col md:duration-duration"
+				class="m-0 -mr-4 flex items-center justify-end p-0 md:absolute md:left-0 md:top-[--header-height] md:m-auto md:w-screen md:flex-col md:duration-duration"
 			>
 				{
 					listItems.map((item) => {
