--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,14 @@
 ---
-import Layout from "../layouts/BaseLayout.astro";
-const title = "Contact Me";
-const description = "How to contact Rohan Nelson";
+import Layout from '../layouts/BaseLayout.astro'
+const title = 'Contact Me'
+const description = 'How to contact Rohan Nelson'
 ---
 
 <Layout title={title} description={description}>
-  <p>
-    Want to get in touch? I'd love to hear from you at <a
-      href="mailto:hello@rohannelson.com">hello@rohannelson.com</a
-    >!
-  </p>
+	<p>
+		Want to get in touch? I'd love to hear from you at <a
+			href="mailto:hello@rohannelson.com"
+			class="underline">hello@rohannelson.com</a
+		>!
+	</p>
 </Layout>
