--- a/src/components/NavCard.astro
+++ b/src/components/NavCard.astro
@@ -21,7 +21,7 @@ import { Icon } from 'astro-icon/components'
 				class="float-right ml-4 h-[60px] w-auto text-[--seriesColourLight]"
 			/>
 			<h4 class="m-0 p-0 [color:--seriesColourLight]">{post.frontmatter.title}</h4>
-			<p class="m-0 mr-[50px] mt-[10px]">{post.frontmatter.description}</p>
+			<p class="m-0 !mt-[10px] mr-[50px]">{post.frontmatter.description}</p>
 		</div>
 	</li>
 </a>
