--- a/src/components/PageNav.astro
+++ b/src/components/PageNav.astro
@@ -2,24 +2,24 @@
 const { page } = Astro.props
 ---
 
-<div class="flex items-center justify-center gap-4">
+<div class="mt-4 flex items-center justify-center gap-4">
 	{
 		page.url.prev ? (
-			<a href={page.url.prev} class="p-0 no-underline">
+			<a href={page.url.prev} class="p-0 underline">
 				Previous page
 			</a>
 		) : null
 	}
 	{
 		page.lastPage > 1 ? (
-			<p class="text-base">
+			<p class="!m-0 text-base">
 				Page {page.currentPage} of {page.lastPage}
 			</p>
 		) : null
 	}
 	{
 		page.url.next ? (
-			<a href={page.url.next} class="p-0 no-underline">
+			<a href={page.url.next} class="p-0 underline">
 				Next page
 			</a>
 		) : null
