--- a/src/pages/blog/chronological/[page].astro
+++ b/src/pages/blog/chronological/[page].astro
@@ -19,7 +19,7 @@ const { page } = Astro.props
 
 <Layout title={title} description={description}>
 	<p>Here are all my posts in chronological order.</p>
-	<ul>
+	<ul class="mt-4 grid gap-y-6">
 		{
 			page.data.map((blog) => {
 				return (
@@ -32,32 +32,3 @@ const { page } = Astro.props
 	</ul>
 	<PageNav page={page} />
 </Layout>
-<style>
-	ul {
-		display: grid;
-		row-gap: 1.5rem;
-		padding: 0;
-		margin: 0;
-	}
-	a {
-		text-decoration: none;
-		color: black;
-		display: block;
-		padding: 1rem;
-	}
-	li {
-		list-style: none;
-		border: 1px solid black;
-		border-radius: 4px;
-		margin: 1rem 0;
-	}
-	img {
-		height: 80px;
-		width: auto;
-		float: right;
-		margin-left: 1rem;
-	}
-	h3 {
-		margin-top: 0px;
-	}
-</style>
