--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,9 +33,9 @@ const description = 'A page that tells you all about Rohan Nelson'
 			psychology!
 		</li>
 		<li class="list-disc">
-			<strong>I'm a father of two, and a husband of one!</strong> Nothing has changed my life quite
-			as radically as getting married and having children. It's not every day that you commit to
-			someone for life, or embark on a series of projects that take at least eighteen years each
+			<strong>I'm a father of three, and a husband of one!</strong> Nothing has changed my life
+			quite as radically as getting married and having children. It's not every day that you commit
+			to someone for life, or embark on a series of projects that take at least eighteen years each
 			before they're ready to fly the nest 🙂
 		</li>
 	</ul>
