--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,7 +32,7 @@ series.forEach((s) => {
 		{series.length > 4 && <a href="/blog/series/1">More Series: &gt;&gt;&gt;</a>}
 	</div>
 	<h2>What's New?</h2>
-	<NavCard post={latestPost} seriesColour={latestPostColour} />
+	<NavCard blogPost={latestPost} seriesColour={latestPostColour} />
 	<div class="flex">
 		<a href="/blog/chronological/1" class="ml-auto mt-5 underline"
 			>More Recent Articles: &gt;&gt;&gt;</a
