--- a/src/pages/blog/chronological/[page].astro
+++ b/src/pages/blog/chronological/[page].astro
@@ -24,7 +24,7 @@ const { page } = Astro.props
 			page.data.map((blog) => {
 				return (
 					<>
-						<NavCard post={blog} seriesColour={seriesColoursObj[blog.frontmatter.series]} />
+						<NavCard blogPost={blog} seriesColour={seriesColoursObj[blog.frontmatter.series]} />
 					</>
 				)
 			})
