--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,25 +1,25 @@
 ---
-import Layout from "../layouts/BaseLayout.astro";
+import Layout from '../layouts/BaseLayout.astro'
 
-const { cookies, redirect } = Astro;
+const { cookies, redirect } = Astro
 
-const accessToken = cookies.get("sb-access-token");
-const refreshToken = cookies.get("sb-refresh-token");
+const accessToken = cookies.get('sb-access-token')
+const refreshToken = cookies.get('sb-refresh-token')
 
 if (accessToken && refreshToken) {
-  return redirect("/projects");
+	return redirect('/projects/games')
 }
 ---
 
 <Layout title="Sign in" description="Login page for my board games app.">
-  <h1>Sign in</h1>
-  <p>New here? <a href="/register">Create an account</a></p>
-  <form action="/api/auth/signin" method="post">
-    <label for="email" for="email">Email</label>
-    <input type="email" name="email" id="email" />
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" />
-    <button type="submit">Login</button>
-    <button value="github" name="provider" type="submit">Sign in with GitHub</button>
-  </form>
+	<h1>Sign in</h1>
+	<p>New here? <a href="/register">Create an account</a></p>
+	<form action="/api/auth/signin" method="post">
+		<label for="email" for="email">Email</label>
+		<input type="email" name="email" id="email" />
+		<label for="password">Password</label>
+		<input type="password" name="password" id="password" />
+		<button type="submit">Login</button>
+		<button value="github" name="provider" type="submit">Sign in with GitHub</button>
+	</form>
 </Layout>
